@@ -32,8 +32,13 @@ public class IndexController implements ExampleInterface {
     private static final String TEMPLATE_ID = "de45a9a2a6014c2c8ac0a4d9057b17a2108e77e7";
 
     public ResponseEntity<String> handleGet(Map<String, String> queryParams) throws IOException {
-        String html = new String(Files.readAllBytes(Paths.get("src/main/resources/static/samples/EmbeddedSenderWithFormCreditLoanAgreement/index.html")));
-        return ResponseEntity.ok().header("Content-Type", "text/html").body(html);
+        try (var inputStream = getClass().getResourceAsStream("/static/samples/EmbeddedSenderWithFormCreditLoanAgreement/index.html")) {
+            if (inputStream == null) {
+                throw new IOException("HTML file not found in classpath");
+            }
+            String html = new String(inputStream.readAllBytes());
+            return ResponseEntity.ok().header("Content-Type", "text/html").body(html);
+        }
     }
 
     public ResponseEntity<?> handlePost(String formData) throws IOException, SignNowApiException {
